index file chaged

--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "@manu5h/common-validations-js",
+  "name": "@manu5h/common-validations-JS",
   "version": "1.0.0",
   "description": "Reusable validation utilities",
   "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
-  "keywords": [
-    "validation",
-    "email",
-    "regex",
-    "react-native",
-    "javascript"
-  ],
-  "license": "MIT",
-  "devDependencies": {
-    "jest": "^30.0.5"
-  }
+  "keywords": ["validation", "email", "regex", "react-native", "javascript"],
+  "license": "MIT"
 }
